Enhance prompt loading and configuration management
- Updated `PromptLoader.Tests.csproj` to reference `appSettings.json` for testing.
- Added tests in `PromptSetLoaderTests.cs` for loading nested prompt sets.
- Modified `PromptLoader.sln` to include solution items like `.gitattributes` and `README.md`.
- Introduced `ResolvePromptPath` in `Program.cs` for dynamic prompt folder resolution.
- Configured prompt folder paths in `appsettings.json` for easier management.
- Ensured `appSettings.json` is copied to the output directory in `PromptLoader.csproj`.
- Refactored `LoadPromptSets` in `PromptSetLoader.cs` to support a structured dictionary for nested sets.
- Updated `appSettings.json` with `PromptsFolder` and `PromptSetFolder` settings.
- Created/updated markdown files for better documentation of prompts.
- Added new classes in `PromptLoader.Prompts.PromptSet.CustomerService.Refund` for handling refund-related prompts.

--- a/PromptLoader.Tests/PromptLoader.Tests.csproj
+++ b/PromptLoader.Tests/PromptLoader.Tests.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="..\PromptLoader\appSettings.json" Link="appSettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
