--- a/PromptLoader/PromptLoader.csproj
+++ b/PromptLoader/PromptLoader.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
