Add Markdown support and tests for prompt sets
- Introduced `LoadPromptSets_LoadsMdFilesInMainPromptSet` test to verify loading of Markdown files in prompt sets.
- Updated `ResolvePromptPath` to configure supported prompt extensions from app settings.
- Refactored `SupportedExtensions` in `PromptLoader.cs` and added `SetSupportedExtensionsFromConfig` method for dynamic configuration.
- Enhanced `appSettings.json` to include `SupportedPromptExtensions` with `.md` support.

--- a/PromptLoader/appSettings.json
+++ b/PromptLoader/appSettings.json
@@ -11,5 +11,8 @@
     "output"
   ],
   "PromptsFolder": "prompts",
-  "PromptSetFolder": "PromptSet"
+  "PromptSetFolder": "PromptSet",
+  "SupportedPromptExtensions": [
+    ".txt", ".prompt", ".yml", ".jinja", ".jinja2", ".prompt.md", ".md"
+  ]
 }
