--- a/PromptLoader/appSettings.json
+++ b/PromptLoader/appSettings.json
@@ -10,8 +10,8 @@
     "guardrails",
     "output"
   ],
-  "PromptsFolder": "prompts",
-  "PromptSetFolder": "PromptSet",
+  "PromptsFolder": "Prompts",
+  "PromptSetFolder": "PromptSets",
   "SupportedPromptExtensions": [
     ".txt", ".prompt", ".yml", ".jinja", ".jinja2", ".prompt.md", ".md"
   ]
