Refactor prompt set structure and add ordering support
Updated `PromptSetLoaderTests` to check for "Root" key instead of "Main". Added `PromptOrderType` property to `IPromptService` for flexible prompt ordering. Modified `PromptService` to initialize this property from configuration and adjusted prompt loading logic to support the new structure. Updated `appSettings.json` to set a default value for `PromptOrderType`.

--- a/PromptLoader/appSettings.json
+++ b/PromptLoader/appSettings.json
@@ -2,6 +2,7 @@
   "OpenAI": {
       "ApiKey": "..."
   },
+  "PromptOrderType": "named", // named, numeric, or none
   "PromptOrder": [
     "system",
     "instructions",
