Enhance prompt joining functionality with custom separator
Updated `JoinPrompts` methods in `Program.cs` and `PromptService.cs` to accept an optional separator parameter, allowing for more flexible prompt concatenation. Modified implementation to utilize the specified separator instead of a default newline. Added a new `PromptSeparator` setting in `appSettings.json` to enable user-defined separators. These changes improve the customization and flexibility of the prompt handling system.

--- a/PromptLoader/appSettings.json
+++ b/PromptLoader/appSettings.json
@@ -15,5 +15,6 @@
   "PromptSetFolder": "PromptSets",
   "SupportedPromptExtensions": [
     ".txt", ".prompt", ".yml", ".jinja", ".jinja2", ".prompt.md", ".md"
-  ]
+  ],
+  "PromptSeparator": "\n---\n"
 }
