Refactor prompt handling from Order to List system
This commit renames and refactors the prompt management system, shifting from a "PromptOrder" approach to a "PromptList" system. Key updates include changes to method names, configuration keys, and the logic for loading and combining prompts. The new implementation alters how prompts are constrained and retrieved, ensuring a more flexible list-based approach. Additionally, test cases have been updated to validate the new prompt list functionality.

--- a/PromptLoader/appSettings.json
+++ b/PromptLoader/appSettings.json
@@ -2,8 +2,8 @@
   "OpenAI": {
       "ApiKey": "..."
   },
-  "PromptOrderType": "named", // named, numeric, or none
-  "PromptOrder": [
+  "PromptListType": "named", // named, numeric, or none
+  "PromptList": [
     "system",
     "instructions",
     "examples",
