Refactor prompt loading system for improved configurability
Updated configuration management to load from appSettings.json, replacing in-memory collections.
Replaced IPromptService with IPromptContext for direct prompt loading.
Refactored PromptContext to support multiple constructors and added CascadeOverride to PromptLoaderOptions.
Restructured appSettings.json for better organization and updated project files to include necessary references.
All tests in PromptLoaderTests.cs have been aligned with the new implementation.

--- a/PromptLoader/appSettings.json
+++ b/PromptLoader/appSettings.json
@@ -1,21 +1,30 @@
 ﻿{
   "OpenAI": {
-      "ApiKey": "..."
+    "ApiKey": "..."
   },
-  "PromptListType": "named", // named, numeric, or none
-  "PromptList": [
-    "system",
-    "instructions",
-    "examples",
-    "groundings",
-    "guardrails",
-    "output"
-  ],
-  "ConstrainPromptList": false,
-  "PromptsFolder": "Prompts",
-  "PromptSetFolder": "PromptSets",
-  "SupportedPromptExtensions": [
-    ".txt", ".prompt", ".yml", ".jinja", ".jinja2", ".prompt.md", ".md"
-  ],
-  "PromptSeparator": "\n{filename}:\n---\n"
-}
+  "PromptLoader": {
+    "PromptListType": "named", // named, numeric, or none
+    "PromptList": [
+      "system",
+      "instructions",
+      "examples",
+      "groundings",
+      "guardrails",
+      "output"
+    ],
+    "ConstrainPromptList": true,
+    "PromptsFolder": "Prompts",
+    "PromptSetFolder": "PromptSets",
+    "SupportedPromptExtensions": [
+      ".txt",
+      ".prompt",
+      ".yml",
+      ".jinja",
+      ".jinja2",
+      ".prompt.md",
+      ".md"
+    ],
+    "PromptSeparator": "\n{filename}:\n---\n",
+    "CascadeOverride": true
+   }
+ }
