--- a/PromptLoader/PromptLoader.csproj
+++ b/PromptLoader/PromptLoader.csproj
@@ -1,5 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<ItemGroup>
+  <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.6" />
+</ItemGroup>
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
